x64 debugで動くようにした。

--- a/ft2demos/demos/ftcommon/ftcommon.vcxproj
+++ b/ft2demos/demos/ftcommon/ftcommon.vcxproj
@@ -91,6 +91,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>.\..\..\ft2demos-2.9.1\graph;.\..\..\freetype-2.9.1\include</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -148,8 +149,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\freetype-2.9.1\builds\windows\vc2010\freetype.vcxproj">
+    <ProjectReference Include="..\..\freetype-2.9.1\builds\windows\vc2010\freetype.vcxproj">
       <Project>{78b079bd-9fc7-4b9e-b4a6-96da0f00248b}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\graph\graph.vcxproj">
+      <Project>{6d611af8-5f53-4626-a06c-a29abd891466}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
