--- a/ft2demos/demos/graph/graph.vcxproj
+++ b/ft2demos/demos/graph/graph.vcxproj
@@ -100,7 +100,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_LIB;DEVICE_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>.\..\..\ft2demos-2.9.1\objs;.\..\..\ft2demos-2.9.1\graph</AdditionalIncludeDirectories>
     </ClCompile>
